# rust-dir-aspect

./: .gitignore  CHANGELOG.md  Cargo.toml
src/: lib.rs
