[package]
name = "dir-aspect"
version = "0.1.1"
edition = "2021"
description = "Detect what kind of application folder a directory is (Git, Obsidian, etc.)"
license = "MIT"
homepage = "https://github.com/sksizer/rust-dir-aspect"

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde"], optional = true }

[features]
default = []
specta = ["dep:specta"]

[dev-dependencies]
serde_json = "1"
